# AudioShare-Server

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  audioshare_device  compile.sh  crichmond@192.168.68.55  dev.sh  docker_entrypoint.sh  env_exec.sh  pi_qr_encode.sh  run.sh  startup.sh  to_pi.sh  watch.sh
crates/dongle_agent/: Cargo.toml
crates/dongle_agent/src/: assignment.rs  main.rs  registration.rs  storage.rs  supervisor.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
deploy/: audioshare-shairport-dbus.conf
docs/: audio-sources-and-receivers.md  multi-room-plan.md  rust-concepts-guide.md
docs/superpowers/: README-development-lifecycle.md
docs/superpowers/plans/: 2026-06-21-multiroom-substep3-snapcast-grouping.md  2026-06-23-airplay-receiver-slice-1.md  2026-06-23-airplay-receiver-slice-2.md  2026-06-25-airplay-receiver-slice-3.md  2026-06-27-airplay-slice4-reroute.md
docs/superpowers/specs/: 2026-06-21-multiroom-substep3-snapcast-grouping-design.md  2026-06-23-airplay-receiver-design.md  2026-06-27-airplay-slice4-reroute-design.md
lib/: libsqlite3.la
lib/pkgconfig/: sqlite3.pc
migrations/: 001_create_initial_tables.sql  migrate.py
src/: .connection.rs.swp  .main.rs.swp  .mdb.rs.swp  .security.rs.swp  authentication.rs  broadcast.rs  connection.rs  main.rs  mdb.rs  pairing.rs  secure_error.rs  security.rs  session.rs  user.rs
src/audio/: airplay.rs  airplay_factory.rs  airplay_manager.rs  airplay_meta.rs  decode.rs  engine.rs  mod.rs  output.rs  player.rs  registry.rs  sink.rs  snapcast.rs  snapcast_control.rs  snapcast_router.rs
src/errors/: connection_error.rs  mod.rs
src/json_structs/: json_trait.rs  mod.rs  response_data.rs  server_response.rs  task_response.rs
src/rest_server/: mod.rs  server.rs  spotify_routes.rs
src/server/: auth_server.rs  broadcast.rs  commands.rs  connection.rs  connection_server.rs  dongle_server.rs  mod.rs  server.rs
