[package]
name = "audio_share"
version = "0.1.0"
edition = "2021"

# The hub is the workspace root package; the custom dongle agent (Change 5
# sub-step 2.3) is `crates/dongle_agent`. Both share wire types via
# `crates/protocol` so the hub<->dongle contract can't drift the way the iOS
# protocol does.
[workspace]
members = ["crates/protocol", "crates/dongle_agent"]

[dependencies]
aes-gcm = "0.10.3"
# Shared hub<->dongle control/registration wire types (Change 5 sub-step 2).
audioshare_protocol = { path = "crates/protocol" }
base64 = "0.22.1"
# Cross-platform audio output: CoreAudio on macOS (dev), ALSA on the Pi.
cpal = "0.15"
curve25519-dalek = "4.1.2"
data-encoding = "2.6.0"
env_logger = "0.11.3"
hkdf = "0.12.4"
image = { version = "=0.25.1", default-features = false, features = ["png"] }
lazy_static = "1.4.0"
# O_NONBLOCK when opening the snapserver input FIFO without a reader (Change 5).
libc = "0.2"
local-ip-address = "0.6.1"
#mdns = "3.0.0"
mdns-sd = "0.11.1"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = { version = "0.12.8", features = ["blocking", "json", "rustls-tls"] }
ring = "0.17.8"
rubato = "0.15"
rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = {version ="1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sha2 = "0.10.8"
sha256 = "1.5.0"
symphonia = { version = "0.6.0", default-features = false, features = ["mp3", "aac", "isomp4"] }
tokio = {version =  "1.37.0", features = ["full"]}
uuid = {version = "1.8.0", features = ["v4"]}
warp = "0.3.7"
x25519-dalek = "2.0.1"
#zeroconf = "0.14.1"

