[package]
name = "audioshare_protocol"
version = "0.1.0"
edition = "2021"

# Shared, dependency-light wire contract between the hub (`audio_share`) and the
# custom dongle agent (`crates/dongle_agent`). Pure serde types + newline-framing
# helpers — no tokio, no audio deps — so both ends share one source of truth and
# the hub<->dongle protocol can't drift (the wire-sync pain we have with iOS).
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
